# finsight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: diferentes_os.yml  saludo.yml
src/agent/: __init__.py
src/ingestion/: __init__.py
src/storage/: __init__.py  posgrest.py
src/transformation/: __init__.py
tests/: test_trasnformation.py
