[project]
name = "finsigth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async>=0.6.2",
    "dotenv>=0.9.9",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "polars>=1.41.2",
    "pytest>=9.1.1",
]
    

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
